--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "node postinstall.js"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@teovilla/react-native-web-maps": "^0.9.5",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-web": "~0.19.6",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.1.3"
+    "react-native": "0.73.6",
+    "react-native-map": "^0.0.1",
+    "react-native-maps": "1.10.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
