--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "@teovilla/react-native-web-maps": "^0.9.5",
     "expo": "~50.0.17",
     "expo-auth-session": "~5.4.0",
@@ -22,6 +24,7 @@
     "react-native": "0.73.6",
     "react-native-map": "^0.0.1",
     "react-native-maps": "1.10.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
