--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-map": "^0.0.1",
     "react-native-maps": "1.10.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
