--- a/package.json
+++ b/package.json
@@ -6,27 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "postinstall": "node postinstall.js"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@teovilla/react-native-web-maps": "^0.9.5",
     "expo": "~50.0.17",
-    "expo-auth-session": "~5.4.0",
     "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "^12.8.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-map": "^0.0.1",
-    "react-native-maps": "1.10.0",
-    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
-    "expo-dev-client": "~3.3.11"
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
